Added back pacage-lock.json because npm reccommended it and added snowpack gitignore stuff.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+### snowpack ###
+.snowpack
+build
+node_modules
+
 ### react ###
 .DS_*
 *.log
@@ -21,5 +26,3 @@ sketch
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
-
-package-lock.json
