--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,23 @@
-### snowpack ###
-.snowpack
-build
+.DS_Store
 node_modules
+/dist
 
-### react ###
-.DS_*
-*.log
-logs
-**/*.backup.*
-**/*.back.*
 
-node_modules
-bower_components
+# local env files
+.env.local
+.env.*.local
 
-*.sublime*
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-psd
-thumb
-sketch
-
-### vscode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
