--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli": "^4.5.11",
     "core-js": "^3.6.5",
     "fp-ts": "^2.9.5",
     "vue": "^3.0.0",
